[project]
authors = [
    {name = "QX-CHEN", email = "c.qixing@yahoo.com.sg"},
]
license = {text = "MIT"}
requires-python = "<4.0,>=3.10"
dependencies = []
name = "qbot"
version = "0.1.0"
description = "Qbot repo"
readme = "README.md"

[project.urls]
homepage = "https://github.com/QX-CHEN/python-boilerplate#readme"
repository = "https://github.com/QX-CHEN/python-boilerplate"

[project.scripts]
myapplication = "myapplication.main:main"

[dependency-groups]
dev = [
    "pytest==8.0.2",
    "pytest-cov==4.1.0",
    "black==24.2.0",
    "mypy==1.8.0",
    "bandit==1.7.7",
    "docformatter==1.7.5",
    "ruff==0.3.0",
]

#[tool.poetry]
#name = "python-boilerplate"
#version = "0.1.0"
#description = "Python boilerplate"
#authors = ["QX-CHEN <c.qixing@yahoo.com.sg>"]
#packages = [
#    { include = "*", from = "src"}
#]
#license = "MIT"
#readme = "README.md"
#homepage = "https://github.com/QX-CHEN/python-boilerplate#readme"
#repository = "https://github.com/QX-CHEN/python-boilerplate"
#
#[tool.poetry.scripts]
#myapplication = "myapplication.main:main"

#[tool.poetry.dependencies]
#python = "^3.10"
#
#[tool.poetry.dev-dependencies]
#pytest = "8.0.2"
#pytest-cov = "4.1.0"
#black = "24.2.0"
#mypy = "1.8.0"
#bandit = "1.7.7"
#docformatter = "1.7.5"
#ruff = "0.3.0"

#[tool.pdm.build]
#includes = ["src/*"]
#
#[build-system]
#requires = ["pdm-backend"]
#build-backend = "pdm.backend"

[tool.pytest.ini_options]
addopts = "-vvv"
testpaths = "tests"

[tool.black]
line_length = 90
target_version = ['py310']

[tool.ruff]
exclude = [
    ".venv",
    ".git",
    "__pycache__",
    "build",
    "dist",
    "venv",
]
ignore = []
line-length = 90
select = [
    "E",
    "F",
    "W",
    "I001",
]
src = ["src", "tests"]

[mypy]
files = ["src"]
strict_optional = false
